Reversed the hot/cold bars and attempted to resolve layout/spacing issues

--- a/media/css/bjcpentry.css
+++ b/media/css/bjcpentry.css
@@ -18,18 +18,16 @@ body {
 }
 
 #left, #right {
-	width: 49.5%;
+	width: 48.0%;
 	float: left;
 	position: relative;
 }
 
 #right {
 	float: right;
-	padding-left: 10px;
-}
-
-#left {
-	border-right: 1px dotted;
+    padding-left: 20px;
+    padding-bottom: 50px;
+    border-left: 1px solid;
 }
 
 #img_hover {
@@ -55,14 +53,6 @@ hr {
     color: #422E13; /* IE is redarded */
     background-color: #422E13; /* Mozilla and Opera are retarded also */
 	margin-bottom: 40px;
-}
-
-footer {
-    margin-top: 35px;
-    margin-bottom: 5px;
-    width: 100%;
-    text-align: center;
-    font-size: 0.7em;
 }
 
 
@@ -104,7 +94,7 @@ a:hover {
 }
 
 .multi_line_description {
-	height: 110px;
+	height: 120px;
 	width: 100%;
     font-style: italic;
     font-size: 10pt;
@@ -186,14 +176,14 @@ div.hotcold_chart {
 	z-index: 1;
 }
 
-.hotcold_marker_1 {
+.hotcold_marker_5 {
 	position: relative;
 	left: -15%;
 	width: 25px;
 	top: 5px;
 }
 
-.hotcold_marker_2 {
+.hotcold_marker_4 {
     position: relative;
     left: -35%;
 	width: 25px;
@@ -207,14 +197,14 @@ div.hotcold_chart {
     top: 5px;
 }
 
-.hotcold_marker_4 {
+.hotcold_marker_2 {
     position: relative;
     left: -70%;
 	width: 25px;
     top: 5px;
 }
 
-.hotcold_marker_5 {
+.hotcold_marker_1 {
     position: relative;
     left: -90%;
 	width: 25px;
